--- a/api-service/requirements.txt
+++ b/api-service/requirements.txt
@@ -6,7 +6,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
-Flask==3.0.2
+Flask==2.2.2
 greenlet==3.0.3
 idna==3.6
 incremental==22.10.0
@@ -37,4 +37,6 @@ six==1.16.0
 typing_extensions==4.11.0
 urllib3==2.2.1
 w3lib==2.1.2
-Werkzeug==3.0.1
+Werkzeug==2.2.3
+Flask-MongoEngine==1.0.0
+Flask-WTF==1.2.1
