--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,9 @@ services:
       - 5000:5000
     command: "python run.py"
     depends_on: [mongo]
+    environment:
+      MONGO_URI: mongodb://${DB_USER}:${DB_PASSWD}@mongo:27017/?authMechanism=DEFAULT
+      DEFAULT_PAGE_SIZE: ${DEFAULT_PAGE_SIZE}
 
   mongo:
     image: mongo:latest
