--- a/Services/api-service/requirements.txt
+++ b/Services/api-service/requirements.txt
@@ -27,6 +27,7 @@ pydantic_core==2.18.1
 PyDispatcher==2.0.7
 pyflakes==3.2.0
 PyJWT==2.8.0
+pytest==8.2.1
 python-dotenv==1.0.1
 queuelib==1.6.2
 reportlab==4.2.0
